# alloy_serde_macro

./: CHANGELOG.md  Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: bytes.rs  lib.rs  macros.rs
