[package]
name = "alloy_serde_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = ["std"] }
serde = { version = "1.0.195", features = ["derive"]}
paste = "1.0.14"