[package]
name = "alloy_serde_macro"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/anticode-dev/alloy_serde_macro"
description = "Work with native sol types while ensuring they are being deserialised into or serialised from non-hex types."

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = ["std"] }
serde = { version = "1.0.195", features = ["derive"]}
paste = "1.0.14"
hex = "0.4.3"
